--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "react-tracker-app",
-  "version": "0.1.0",
+  "title": "React Tracker APP",
+  "version": "1.0.0",
+  "description": "Module Tracker App de la formation React Mastery de Mike Codeur",
   "private": true,
+  "author": "Mike Codeur",
+  "license": "GPL-3.0-only",
+  "homepage": "https://react-tracker-app.mikecodeur.com/",
+  "engines": {
+    "node": "12 || 14 || 15 || 16",
+    "npm": ">=6"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,17 +20,39 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "husky": "4.3.8",
+    "inquirer": "^8.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.1",
+    "resolve": "^1.20.0",
+    "serve": "^12.0.0",
+    "whatwg-fetch": "^3.6.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "is-ci-cli \"test:coverage\" \"test:watch\"",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --watch=false --coverage",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --watch --runInBand",
+    "init": "node install",
+    "lint": "eslint . --cache-location node_modules/.cache/eslint",
+    "format": "prettier --write \"**/*.+(js|json|css|md|mdx|html)\"",
+    "validate-exercises": "node ./scripts/validate-exercises",
+    "validate": "npm run validate-exercises && npm-run-all --parallel lint test:coverage && node ./scripts/build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "node ./scripts/pre-push"
+    }
   },
   "browserslist": {
     "production": [
@@ -34,5 +65,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "main": "go_.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mikecodeur/react-module-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mikecodeur/react-module-template/issues"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
