--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "prettier": "^2.3.1",
     "resolve": "^1.20.0",
     "serve": "^12.0.0",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "^3.6.2",
+    "is-ci": "^3.0.0",
+    "is-ci-cli": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
